add product page

--- a/src/components/ContentMarketplace/MarketplaceBlock/MarketplaceBlock.css
+++ b/src/components/ContentMarketplace/MarketplaceBlock/MarketplaceBlock.css
@@ -5,7 +5,8 @@
 }
 
 .marketplace_main_main .marketplace_block_wrapper,
-.creator_account_main_block .marketplace_block_wrapper {
+.creator_account_main_block .marketplace_block_wrapper,
+.product_footer_products .marketplace_block_wrapper {
   position: relative;
   max-width: 22%;
   margin: 0 auto 30px;
@@ -179,14 +180,16 @@
 
 @media (max-width: 991.98px) {
   .marketplace_main_main .marketplace_block_wrapper,
-  .creator_account_main_block .marketplace_block_wrapper {
+  .creator_account_main_block .marketplace_block_wrapper,
+  .product_footer_products .marketplace_block_wrapper {
     max-width: 28%;
   }
 }
 
 @media (max-width: 767.98px) {
   .marketplace_main_main .marketplace_block_wrapper,
-  .creator_account_main_block .marketplace_block_wrapper {
+  .creator_account_main_block .marketplace_block_wrapper,
+  .product_footer_products .marketplace_block_wrapper {
     max-width: 40%;
   }
 }
@@ -197,13 +200,15 @@
     max-width: 280px;
   }
 
-  .creator_account_main_block .marketplace_block_wrapper {
+  .creator_account_main_block .marketplace_block_wrapper,
+  .product_footer_products .marketplace_block_wrapper {
     max-width: 49%;
   }
 }
 
 @media (max-width: 389.98px) {
-  .creator_account_main_block .marketplace_block_wrapper {
+  .creator_account_main_block .marketplace_block_wrapper,
+  .product_footer_products .marketplace_block_wrapper {
     max-width: 280px;
   }
 }
