--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -70,11 +70,11 @@ header {
 }
 
 .nft_collapse.active {
-  height: 120px;
+  height: 100px;
   transition: 0.2s;
-  width: 200px;
+  width: 180px;
   opacity: 1;
-  padding: 20px 10px 15px 0;
+  padding: 24px 10px 15px 0;
 }
 
 .dark .nft_collapse {
@@ -940,6 +940,7 @@ div.menu-item .soc_header_mobile {
   font-size: 10px;
   line-height: 10px;
   margin-left: 5px;
+  font-style: normal;
 }
 
 .user_header_menu .header_avatar {
