--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,7 @@ body {
 .App {
   transition: 0.5s;
   background: #e9f1ff;
+  min-height: 100vh;
 }
 
 .App.dark {
@@ -307,4 +308,22 @@ h3 img {
 .profile {
   margin-top: 90px;
   padding: 50px 0;
+  background: url('./assets/img/marketplace_bg.png') no-repeat left;
+  background-size: cover;
+}
+
+.main_profile {
+  display: flex;
+}
+
+@media (max-width: 991.98px) {
+  .main_profile {
+    flex-direction: column;
+  }
+}
+
+@media (min-width: 1299.98px) {
+  .profile .container {
+    max-width: 1290px;
+  }
 }
