--- a/src/components/Partners/Partners.css
+++ b/src/components/Partners/Partners.css
@@ -1,10 +1,10 @@
 .partners {
-  background: url("../../assets/img/mian_bg_nft.png") no-repeat center;
+  background: url('../../assets/img/mian_bg_nft.png') no-repeat center;
   background-size: contain;
 }
 
 .partners_wrapper {
-  background: url("../../assets/img/partners_bg.png") no-repeat center;
+  background: url('../../assets/img/partners_bg.png') no-repeat center;
   background-size: 120%;
   padding: 55px 0;
 }
@@ -36,7 +36,7 @@
   outline: none;
   cursor: pointer;
   transition: 0.4s;
-  background: url("../../assets/img/learn_more_button_bg.png") no-repeat center;
+  background: url('../../assets/img/learn_more_button_bg.png') no-repeat center;
   background-size: contain;
   font-family: Poppins;
   font-style: normal;
@@ -56,8 +56,8 @@
 }
 
 .become_partner::before {
-  content: "";
-  background: url("../../assets/img/signup_button_bg.png") no-repeat center;
+  content: '';
+  background: url('../../assets/img/signup_button_bg.png') no-repeat center;
   background-size: contain;
   position: absolute;
   left: 0;
@@ -101,5 +101,9 @@
 
   .partners_slide_wrapper {
     padding: 0 20px;
+  }
+
+  .partners_wrapper {
+    padding: 0;
   }
 }
