--- a/src/components/Creators/CreatorsBlock/CreatorsBlock.css
+++ b/src/components/Creators/CreatorsBlock/CreatorsBlock.css
@@ -26,9 +26,22 @@
   padding: 8px;
   margin-top: 10px;
   display: flex;
+  cursor: pointer;
+}
+
+.creator_block_info:hover {
+  background: url('../../../assets/img/creators_border_info_hover.png')
+    no-repeat center;
+  background-size: 99% 99%;
+}
+
+.creator_block_info:hover .creator_block_info_main {
+  box-shadow: 0px 0px 5px 0px rgba(0, 87, 255, 1);
+  transition: 0.4s;
 }
 
 .creator_block_info_main {
+  transition: 0.4s;
   background: #fff;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
