--- a/src/components/ProductCard/Product/Product.css
+++ b/src/components/ProductCard/Product/Product.css
@@ -64,9 +64,13 @@
   font-family: Poppins;
   font-style: normal;
   font-weight: normal;
-  font-size: 18px;
-  line-height: 27px;
+  font-size: 16px;
+  line-height: 24px;
   color: #000;
+}
+
+.product_header span:nth-child(2) {
+  margin-left: -100px;
 }
 
 .dark .product_header span {
@@ -86,8 +90,8 @@
   font-family: Poppins;
   font-style: normal;
   font-weight: 300;
-  font-size: 18px;
-  line-height: 26px;
+  font-size: 16px;
+  line-height: 24px;
   display: flex;
   align-items: center;
   color: #000;
@@ -279,6 +283,9 @@
 }
 
 @media (max-width: 991.98px) {
+  .product_avtor {
+    flex-wrap: wrap;
+  }
   .product_main {
     flex-wrap: wrap;
     justify-content: center;
@@ -303,6 +310,10 @@
 
   .product_footer_products {
     flex-wrap: wrap;
+  }
+
+  .product_header span:nth-child(2) {
+    margin-left: 0;
   }
 }
 
