--- a/src/components/Tokenomics/Tokenomics.css
+++ b/src/components/Tokenomics/Tokenomics.css
@@ -401,6 +401,7 @@
   .tokenomics_right_block {
     flex-direction: row-reverse;
     justify-content: flex-end;
+    padding-bottom: 17px;
   }
   .tokenomics_right_block span {
     width: 60%;
@@ -412,11 +413,11 @@
   }
 
   .green_1 {
-    margin-bottom: -20px;
+    margin: 0px;
   }
 
   .green_3 {
-    margin-top: -20px;
+    margin-top: 0;
   }
 }
 
@@ -471,8 +472,12 @@
   }
   .tokenomics_right_wrapper {
     width: 55%;
-    height: 300px;
-    margin-top: 0;
+    height: 267px;
+    margin-top: 17px;
+  }
+  .tokenomics_right_wrapper:nth-child(2n+1) {
+      margin-top: 10px;
+      padding-bottom: 5px;
   }
   .tokenomics_right_block span,
   .tokenomics_right_block h6 {
