--- a/src/components/Tokenomics/Tokenomics.css
+++ b/src/components/Tokenomics/Tokenomics.css
@@ -91,18 +91,13 @@
 }
 
 .tokenomics_left_wrapper {
-  margin-top: 30px;
+  margin-bottom: 30px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 500px;
   left: 0;
   max-width: 50vw;
-}
-
-.tokenomics_left_wrapper img {
-  height: 50px;
-  max-width: 90%;
 }
 
 .tokenomics_right_block {
@@ -356,6 +351,7 @@
   }
   .tokenomics_left_wrapper {
     max-width: 50vw;
+    margin-top: 100px;
   }
   .tokenomics_right_block span {
     width: 200px;
@@ -475,16 +471,21 @@
     height: 267px;
     margin-top: 17px;
   }
-  .tokenomics_right_wrapper:nth-child(2n+1) {
+
+  .tokenomics_right_block:nth-child(5) span {
       margin-top: 10px;
-      padding-bottom: 5px;
   }
-  .tokenomics_right_block span,
-  .tokenomics_right_block h6 {
-    width: 100%;
-    font-size: 12px;
-    line-height: 16px;
+
+  .tokenomics_right_wrapper:first-child {
+      margin-top: -10px;;
   }
+
+    .tokenomics_right_block span,
+    .tokenomics_right_block h6 {
+        width: 100%;
+        font-size: 12px;
+        line-height: 16px;
+    }
   .tokenomics_right_block {
     height: 30px;
   }
@@ -499,10 +500,11 @@
     margin-top: 20px;
   }
   .tokenomics_left_wrapper {
-    height: 320px;
+    margin-left: 40px;
+    margin-bottom: 10px;
   }
   .tokenomics_right {
-    margin-top: 370px;
+    margin-top: 330px;
   }
 }
 
