fixing iphone x margin tokenomics

--- a/src/components/Tokenomics/Tokenomics.css
+++ b/src/components/Tokenomics/Tokenomics.css
@@ -501,7 +501,7 @@
   }
   .tokenomics_left_wrapper {
     margin-left: 40px;
-    margin-bottom: 10px;
+    margin-top: 30px;
   }
   .tokenomics_right {
     margin-top: 330px;
