--- a/src/components/Tokenomics/Tokenomics.css
+++ b/src/components/Tokenomics/Tokenomics.css
@@ -66,16 +66,18 @@
 }
 
 .tokenomics_main_wrapper {
-  padding-top: 40px;
-  background: rgba(255, 255, 255, 0.02);
-  box-shadow: 0px 0px 22px #0057ff;
-  -webkit-backdrop-filter: blur(7px);
-  backdrop-filter: blur(7px);
-  border-radius: 43px;
-  padding-right: 10px;
-  padding-bottom: 40px;
-  overflow: hidden;
-  margin: 0 -70px;
+    background: url(../../assets/img/tokenomics/lightening-left.png) left top no-repeat, url(../../assets/img/tokenomics/lightening-right.png) right top no-repeat rgba(255, 255, 255, 0.07);
+    background-position: 6% -105%, 90% -76%;
+    padding-top: 40px;
+    box-shadow: 0px 0px 37px 0px #A5A3FF;
+    -webkit-backdrop-filter: blur(7px);
+    backdrop-filter: blur(20px);
+    border-radius: 18px;
+    border: 1px solid #fff;
+    padding-right: 10px;
+    padding-bottom: 40px;
+    overflow: hidden;
+    margin: 0 -70px;
 }
 
 .tokenomics_left {
@@ -118,10 +120,9 @@
   color: #ffffff;
   cursor: pointer;
   margin-top: 50px;
-  position: absolute;
+  position: relative;
   top: -20px;
-  right: 30px;
-  width: 140px;
+  width: 100%;
   height: 50px;
   display: flex;
   justify-content: center;
@@ -130,8 +131,17 @@
   outline: none;
 }
 
+.fundraising {
+    width: 100%;
+    align-items: center;
+    position: relative;
+}
+
+.first background {
+}
+
 .green_1 {
-  margin-bottom: -30px;
+    margin-bottom: -30px;
 }
 
 .tokenomics_right_block span i {
@@ -233,7 +243,7 @@
   font-family: Rambla;
   font-style: bold;
   font-weight: 800;
-  font-size: 16px;
+  font-size: 24px;
   line-height: 20px;
   color: #000000;
   width: 300px;
@@ -340,9 +350,11 @@
 }
 
 @media (max-width: 1299.98px) {
-  .tokenomics_main_wrapper {
-    margin: 0;
-  }
+    .tokenomics_main_wrapper {
+        margin: 0;
+        background: none;
+        background-position: 6% -105%, 90% -76%;
+    }
 }
 
 @media (max-width: 1199.98px) {
@@ -350,8 +362,7 @@
     width: 50%;
   }
   .tokenomics_left_wrapper {
-    max-width: 50vw;
-    margin-top: 100px;
+      margin: 90px auto;
   }
   .tokenomics_right_block span {
     width: 200px;
@@ -366,8 +377,6 @@
     margin: 0 auto;
   }
   .tokenomics_main_wrapper {
-    background: none;
-    box-shadow: none;
     -webkit-backdrop-filter: none;
     backdrop-filter: none;
   }
@@ -389,9 +398,6 @@
   .tokenomics_right {
     width: 100%;
     margin-top: 550px;
-  }
-  .tokenomics_left_wrapper {
-    max-width: 100%;
   }
 
   .tokenomics_right_block {
@@ -500,7 +506,6 @@
     margin-top: 20px;
   }
   .tokenomics_left_wrapper {
-    margin-left: 40px;
     margin-top: 30px;
   }
   .tokenomics_right {
