--- a/src/components/ContentMarketplace/Filter/Filter.css
+++ b/src/components/ContentMarketplace/Filter/Filter.css
@@ -207,7 +207,7 @@
   outline: none;
 }
 
-.price_filter .applay {
+.price_filter .apply {
   background: rgba(255, 255, 255, 0.02);
   border: 1px solid #797979;
   -webkit-backdrop-filter: blur(16px);
@@ -581,7 +581,7 @@
   .price_filter_range {
     margin: 20px 0;
   }
-  .price_filter .applay {
+  .price_filter .apply {
     margin: 0;
   }
   .collections_filter,
