--- a/src/components/Account/AccountMainted/AccountMainted.css
+++ b/src/components/Account/AccountMainted/AccountMainted.css
@@ -3,10 +3,6 @@
   margin-top: 80px;
 }
 
-.creator_accout_img_wrapper {
-  margin: 0 -30px;
-}
-
 .creator_account_avatar {
   background: url('../../../assets/img/creator_account_avatar_bg.png') no-repeat
     center;
@@ -22,6 +18,46 @@
 
 .creator_account_main_header {
   position: relative;
+}
+
+.creator_account_main_header h6 span {
+  color: #000;
+  margin-right: 5px;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: #000;
+}
+
+.dark .creator_account_main_header h6 span {
+  color: #fff;
+  background: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: #fff;
+}
+
+.img_line {
+  margin: 0 -30px;
+  position: relative;
+}
+
+.account_img_edit {
+  position: absolute;
+  right: 20px;
+  top: 10px;
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  background: #8d8ea4;
+  border: none;
+  outline: none;
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.account_img_edit img {
+  width: 18px;
+  height: 18px;
 }
 
 .creator_account_main_header h6 {
@@ -262,15 +298,31 @@
   display: flex;
   margin: 40px 0;
   justify-content: center;
+  align-items: center;
 }
 
-.creator_account_menu button {
+.creator_account_menu a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.creator_account_menu button,
+.creator_account_menu a {
   border: none;
   background: none;
   outline: none;
 }
 
-.creator_account_menu button {
+.creator_account_menu a.active {
+  background: url('../../../assets/img/mobile_profile_active.png') no-repeat
+    center;
+  background-size: 99% 99%;
+}
+
+.creator_account_menu button,
+.creator_account_menu a {
   background: url('../../../assets/img/creator_account_menu_border.png')
     no-repeat center;
   background-size: 99% 99%;
@@ -280,19 +332,41 @@
   font-size: 14px;
   line-height: 21px;
   color: #000;
-  width: 140px;
+  width: 150px;
   height: 40px;
   margin: 0 10px;
   cursor: pointer;
+  white-space: nowrap;
 }
 
-.creator_account_menu button span i {
+.creator_account_menu button span i,
+.creator_account_menu a span i {
   font-style: normal;
   color: #36dafc;
 }
 
-.dark .creator_account_menu button {
+.dark .creator_account_menu button,
+.dark .creator_account_menu a {
   color: #ffffff;
+}
+
+.creator_account_menu a::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: url('../../../assets/img/mobile_profile_active_before.png')
+    no-repeat center;
+  background-size: 100% 100%;
+  margin-left: 5px;
+  z-index: 1;
+  opacity: 0;
+  transition: 0.4s;
+}
+
+.creator_account_menu a.active::before {
+  opacity: 1;
+  margin-top: -5px;
 }
 
 .creator_account_main_block {
@@ -300,7 +374,55 @@
   flex-wrap: wrap;
 }
 
+.creator_account_filter {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.creator_account_filter .header_search input {
+  width: 350px;
+  margin-left: 60px;
+}
+
+@media (max-width: 991.98px) {
+  .creator_account_main_header h6 span {
+    display: none;
+  }
+  .creator_account_filter .header_search {
+    display: block;
+    position: relative;
+    top: auto;
+    left: auto;
+    opacity: 1;
+    background: transparent;
+    width: auto;
+    height: auto;
+  }
+
+  .account_collection .creator_account_menu button,
+  .account_collection .creator_account_menu a {
+    font-size: 13px;
+  }
+}
+
 @media (max-width: 767.98px) {
+  .account_collection .creator_account_menu button,
+  .account_collection .creator_account_menu a {
+    width: 140px;
+    margin: 2px 8px;
+  }
+
+  .creator_account_filter .header_search {
+    width: 100%;
+  }
+  .creator_account_filter .header_search input {
+    width: 100%;
+    margin: 0;
+  }
+  .img_line {
+    margin: 0;
+  }
   .creator_account_menu_wrapper {
     overflow-x: scroll;
   }
@@ -330,6 +452,14 @@
 }
 
 @media (max-width: 575.98px) {
+  .img_line .account_img_edit {
+    display: none;
+  }
+
+  .img_line img {
+    height: 90px;
+    width: auto;
+  }
   .creator_account_menu button {
     margin: 2px;
   }
@@ -339,12 +469,6 @@
   .creator_account_avatar {
     width: 80px;
     height: 80px;
-  }
-  .creator_accout_img_wrapper {
-    margin: 0px -10px;
-  }
-  .creator_accout_img_wrapper img {
-    min-height: 75px;
   }
 }
 
