--- a/src/components/CreateProduct/Collection/Collection.css
+++ b/src/components/CreateProduct/Collection/Collection.css
@@ -1,23 +1,68 @@
 .collection_product {
   margin-top: 90px;
+  margin-left: 50px;
   padding: 50px 0;
 }
 
 .collection_product .goBack_button {
   padding-top: 0;
+  color: #313139;
 }
 
+.dark .collection_product .goBack_button {
+  padding-top: 0;
+  color: #fff;
+}
+
+.collection_product .__react_component_tooltip {
+  max-width: 500px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 26px;
+  color: #000;
+  background: #d7e3ff;
+  border: 1px solid #0075ff;
+  -webkit-backdrop-filter: blur(16px);
+  backdrop-filter: blur(16px);
+  opacity: 1 !important;
+}
+
+.collection_product .__react_component_tooltip h6 {
+  margin: 0;
+  display: flex;
+  align-items: center;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 26px;
+  color: #000;
+}
+
+.dark .collection_product .__react_component_tooltip {
+  color: #ffffff;
+  background: #1b1845;
+}
+
+.dark .collection_product .__react_component_tooltip h6 {
+  color: #ebebeb;
+}
 .collection_product h3 {
   font-family: Poppins;
   font-style: normal;
   font-weight: 600;
   font-size: 36px;
   line-height: 103.5%;
-  color: #000;
+  color: #313139;
   margin: 30px 0;
 }
 .dark .collection_product h3 {
-  color: #fff;
+  color: #ebebeb;
 }
 
 .collection_product span {
@@ -26,7 +71,7 @@
   font-weight: normal;
   font-size: 18px;
   line-height: 22px;
-  color: #000;
+  color: #313139;
 }
 
 .dark .collection_product span {
@@ -41,16 +86,15 @@
   line-height: 21px;
   display: flex;
   align-items: center;
-  color: #000;
+  color: #313139;
   cursor: pointer;
 }
 
 .dark .tutorial {
-  color: #fff;
+  color: #ebebeb;
 }
 
 .collection_product_main {
-  max-width: 1000px;
   margin: 0 auto;
 }
 
@@ -72,15 +116,16 @@
   line-height: 103.5%;
   display: flex;
   align-items: center;
-  color: #000;
+  color: #313139;
   margin: 10px 0;
 }
 
 .dark .collection_product .collection_block h5 {
-  color: #ffffff;
+  color: #ebebeb;
 }
 
-.collection_product .collection_block span {
+.collection_product .collection_block > span,
+.collection_product .collection_block div > span {
   font-family: Poppins;
   font-style: normal;
   font-weight: normal;
@@ -88,8 +133,15 @@
   line-height: 103.5%;
   display: flex;
   align-items: center;
-  color: #a7a7a7;
+  color: #656565;
   margin-bottom: 20px;
+  line-height: 30px;
+  max-width: 70%;
+}
+
+.dark .collection_product .collection_block > span,
+.dark .collection_product .collection_block div > span {
+  color: #7c7c7c;
 }
 
 .collection_product .collection_block.collection_block_img label {
@@ -114,7 +166,7 @@
 }
 
 .collection_product .collection_block.collection_banner_img label {
-  width: 60%;
+  width: 65%;
 }
 
 .collection_block input,
@@ -150,15 +202,15 @@
 }
 
 .dark .collection_block label {
-  color: #ffffff;
+  color: #ebebeb;
 }
 
 .collection_block_url input {
-  min-width: 600px;
+  min-width: 65%;
 }
 
 .collection_block_desc textarea {
-  min-width: 600px;
+  min-width: 65%;
 }
 
 .collection_block_royalties label {
@@ -187,8 +239,14 @@
   margin-right: 30px;
   cursor: pointer;
 }
+
+.collection_block_buttons button:hover {
+  border: 1px solid #5d6ef6;
+}
+
 .collection_block_buttons button img {
   margin-right: 15px;
+  max-width: 40px;
 }
 
 .collection_block_buttons > div {
@@ -213,12 +271,51 @@
   margin: 0;
 }
 
-.dark .collection_block_buttons button h6 {
+.collection_block_buttons button.active h6 {
   color: #fff;
+}
+
+.dark .collection_block_buttons button h6 {
+  color: #ebebeb;
+}
+
+.collection_block_tokens.collection_block_buttons button h6 {
+  font-weight: 400;
+}
+
+.collection_block_tokens.collection_block_buttons button img {
+  max-width: 32px;
+}
+
+.collection_block_buttons button.active {
+  background: #2475d6;
+  border: 1px solid #7870fe;
+  -webkit-backdrop-filter: blur(16px);
+  backdrop-filter: blur(16px);
+  color: #fff;
+}
+.dark .collection_block_buttons button.active {
+  background: #360c92;
+  -webkit-backdrop-filter: blur(16px);
+  backdrop-filter: blur(16px);
+}
+.collection_block_tokens.collection_block_buttons button {
+  margin-right: 10px;
+}
+
+.collection_block_tokens.collection_block_buttons > div > div {
+  display: flex;
+  align-items: center;
+  margin-right: 30px;
+}
+
+.collection_block_tokens.collection_block_buttons > div > div > div img {
+  max-width: 25px;
 }
 
 .collection_product .collection_block_buttons button span {
   margin-bottom: 0;
+  line-height: 18px;
 }
 .collection_product select {
   background: rgba(255, 255, 255, 0.04);
@@ -234,7 +331,115 @@
   min-width: 600px;
 }
 
+.collection_block_content_minters {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 30px;
+}
+
 .dark .collection_product select {
+  color: #fff;
+}
+
+.collection_block_name {
+  display: flex;
+}
+
+.symbol_block {
+  width: 150px;
+  margin-left: 50px;
+}
+.symbol_block input {
+  min-width: 150px;
+  width: 150px;
+}
+
+.active_minters {
+  display: flex;
+  margin-top: 30px;
+  overflow-x: scroll;
+}
+
+.active_minters_block {
+  margin: 10px 20px 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+
+.collection_product .active_minters_block img {
+  max-width: 60px;
+}
+.collection_product .active_minters_block h5 {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 30px;
+}
+
+.collection_product .active_minters_block img {
+  padding: 7px;
+  border: 1px solid #525252;
+  border-radius: 4px;
+  max-width: 70px;
+}
+
+.collection_product .active_minters_block .close_btn {
+  border: none;
+  padding: 0;
+  width: 16px;
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.collection_product .collection_block input {
+  color: #000 !important;
+}
+
+.dark .collection_product .collection_block input {
+  color: #fff !important;
+}
+
+div[class*='-ValueContainer'] {
+  background: url('../../../assets/img/search_icon.png') no-repeat center right;
+  background-position-x: 98%;
+}
+
+div[class*='-indicatorContainer'] {
+  display: none !important;
+}
+
+div[class*='-multiValue'] {
+  display: none !important;
+}
+
+div[class*='-Input'] {
+  color: #000 !important;
+}
+
+.dark div[class*='-Input'] {
+  color: #fff !important;
+}
+
+div[class*='-control'] {
+  background: transparent;
+  min-width: 220px;
+  border-color: #797979;
+}
+
+div[class*='-menu'] div[class*='-control'] {
+  border: none !important;
+}
+
+div[class*='-singleValue'] {
+  color: #000;
+}
+
+.dark div[class*='-singleValue'] {
   color: #fff;
 }
 
@@ -289,8 +494,12 @@ span[class*='indicatorSeparator'] {
 }
 
 div[class*='-control']:hover {
-  border: none !important;
   box-shadow: none !important;
+  border-color: #797979;
+}
+
+.collection_block_content_minters span {
+  margin: 0 !important;
 }
 
 .dark
@@ -388,30 +597,44 @@ div[class*='-control']:hover {
 
 .collection_block.collection_block_links input {
   background: url('../../../assets/img/links_input_bg.png') no-repeat center;
-  background-size: 99% 99%;
+  background-size: 98% 98%;
   border: none;
   background-color: transparent;
-  width: 600px;
+  width: 900px;
+  height: 52px;
   margin: -1px 0 0;
   position: relative;
-  padding-left: 50px;
+  padding-left: 80px;
   -webkit-backdrop-filter: none;
-          backdrop-filter: none;
+  backdrop-filter: none;
+  margin: 5px 0;
+  padding-right: 45px;
 }
 
 .collection_block_links div {
   position: relative;
+  margin-left: -5px;
+}
+
+.collection_block_links img {
+  position: absolute;
+  width: 12px;
+  height: 12px;
+  top: 50%;
+  left: 850px;
+  transform: translateY(-50%);
+  cursor: pointer;
 }
 
 .collection_block_links div::before {
   content: '';
   background: url('../../../assets/img/global_1.png') no-repeat center;
   background-size: contain;
-  width: 20px;
-  height: 20px;
+  width: 25px;
+  height: 25px;
   position: absolute;
   z-index: 1;
-  left: 12px;
+  left: 25px;
   top: 50%;
   transform: translateY(-50%);
 }
@@ -452,7 +675,142 @@ div[class*='-control']:hover {
   background-size: contain;
 }
 
+.collection_block_content {
+  display: flex;
+  flex-wrap: wrap;
+  min-width: 1100px;
+}
+
+div[class*='-menu'] {
+  z-index: 2;
+  background: #e9f1ff !important;
+  border: 1px solid #797979;
+}
+
+div[class*='-menu'] span {
+  line-height: 0 !important;
+  color: #000 !important;
+  background: transparent !important;
+}
+div[class*='-menu'] span img {
+  padding: 3px;
+  border: 1px solid #797979;
+  border-radius: 3px;
+  margin-right: 10px;
+  max-width: 35px;
+}
+
+div[class*='-menu'] span button {
+  border: none;
+  outline: none;
+  display: flex;
+  height: 18px;
+  align-items: center;
+  background: linear-gradient(90deg, #531ae1 -21.11%, #3986f9 137.78%);
+  border-radius: 10px;
+  margin-left: 10px;
+  padding: 1px 10px;
+  color: #fff;
+  cursor: pointer;
+}
+
+div[class*='-menu'] div {
+  color: #000 !important;
+  background: transparent !important;
+}
+
+.dark div[class*='-menu'] div {
+  background: transparent !important;
+  color: #fff !important;
+}
+
+.dark div[class*='-menu'] span {
+  color: #fff !important;
+  background: transparent !important;
+}
+
+.dark div[class*='-menu'] {
+  z-index: 2;
+  background: #141233 !important;
+  border: 1px solid #797979;
+}
+
+.collection_block_content_wrapper {
+  overflow-x: scroll;
+  margin-top: 30px;
+  margin-left: -20px;
+}
+
+.collection_block_content_wrapper::-webkit-scrollbar,
+.active_minters::-webkit-scrollbar {
+  width: 3px;
+  background-color: transparent;
+  z-index: 2;
+  position: relative;
+}
+
+.collection_block_content_wrapper::-webkit-scrollbar-thumb,
+.active_minters::-webkit-scrollbar-thumb {
+  background-color: #bababa;
+  border-radius: 30px;
+  z-index: 2;
+  position: relative;
+}
+.collection_block_url label {
+  cursor: pointer;
+}
+
+.collection_block_url label img {
+  max-width: 25px;
+}
+
+.collection_product .place-top::after {
+  border-top-color: #0075ff !important;
+}
+
+.content_arrow {
+  transform: rotate(270deg);
+  transition: 0.4s;
+}
+
+.content_arrow.active {
+  transition: 0.4s;
+  transform: rotate(90deg);
+}
+
+@media (max-width: 991.98px) {
+  .collection_product {
+    margin-left: 0;
+  }
+  .collection_block.collection_block_links input {
+    width: 100%;
+  }
+
+  .collection_block_links div::before {
+    left: 18px;
+  }
+
+  .collection_block_links img {
+    left: 95%;
+  }
+}
 @media (max-width: 767.98px) {
+  .collection_product .collection_block > span,
+  .collection_product .collection_block div > span {
+    max-width: 100%;
+  }
+  .dark .collection_product .__react_component_tooltip {
+    max-width: 90%;
+    left: 5% !important;
+  }
+  .collection_block_tokens.collection_block_buttons > div > div {
+    margin-right: 10px;
+  }
+  .collection_block_links img {
+    left: auto;
+    right: 20px;
+  }
+
   .collection_product .collection_block.collection_block_img label {
     width: 200px;
   }
@@ -460,8 +818,9 @@ div[class*='-control']:hover {
     width: 250px;
   }
   .collection_product .collection_block.collection_banner_img label {
-    width: 300px;
+    width: 100%;
   }
+
   .collection_block_url input,
   .collection_block_desc textarea,
   .collection_block_royalties input {
@@ -485,9 +844,6 @@ div[class*='-control']:hover {
   .collection_block_payment.collection_block_buttons button img {
     margin-right: 0;
   }
-  .collection_block_blockchain div {
-    display: none;
-  }
   .collection_product select {
     min-width: 100%;
   }
@@ -510,7 +866,9 @@ div[class*='-control']:hover {
   .collection_block.collection_block_links input {
     background: url('../../../assets/img/links_input_bg_mobile.png') no-repeat
       center;
-    background-size: 99% 99%;
+    background-size: 97% 99%;
+    height: 44px;
+    padding-left: 55px;
   }
 
   .collection_block_category > div {
@@ -524,5 +882,46 @@ div[class*='-control']:hover {
 
   .collection_product .collection_block_category select {
     width: 100%;
+  }
+}
+
+@media (max-width: 575.98px) {
+  .collection_block_buttons button {
+    width: 130px;
+    min-width: auto;
+    padding: 5px;
+    height: 55px;
+  }
+  .collection_block_buttons button h6 {
+    font-size: 14px;
+  }
+  .collection_block_buttons button img {
+    margin-right: 5px;
+    width: 30px;
+  }
+
+  .collection_product .collection_block {
+    flex-wrap: wrap;
+  }
+  .collection_block input {
+    min-width: 100%;
+    width: 100%;
+  }
+
+  .collection_block.collection_block_name div {
+    width: 100%;
+  }
+  .symbol_block {
+    margin: 20px 0 0 0;
+    width: 100%;
+  }
+  .collection_block_buttons button {
+    margin-right: 41px;
+  }
+}
+
+@media (max-width: 360.98px) {
+  .collection_block_buttons button {
+    margin-right: 30px;
   }
 }
